# ChangeLog for app-admin/eselect-emacs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  30 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
  +eselect-emacs-0.7-r1.ebuild:
  Desktop and icon files moved to x11-misc/emacs-desktop.

  29 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
  -files/eselect-emacs-0.3-r119.patch:
  More cleanup.

  29 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
  -eselect-emacs-0.5.ebuild, -eselect-emacs-0.6-r1.ebuild:
  Clean up.

  29 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
  +eselect-emacs-0.7.ebuild:
  Added man page.

  28 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
  -eselect-emacs-0.6.ebuild, +eselect-emacs-0.6-r1.ebuild:
  Added remove_symlinks again.

  28 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
  +eselect-emacs-0.6.ebuild:
  Removed -n option in emacsclient.desktop. Call env-update to update the
  environment from env.d files. Brought do_set and do_update more in line.
  Check for root in do_set and do_update. Redundant remove_symlinks removed.

  26 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  -eselect-emacs-0.3.ebuild, -eselect-emacs-0.3-r2.ebuild,
  -eselect-emacs-0.4.ebuild:
  clean up

  24 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
  +eselect-emacs-0.5.ebuild:
  MimeType and TryExec keys added to emacs.desktop. Desktop file for
  emacsclient.

  23 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
  -eselect-emacs-0.1.ebuild, -eselect-emacs-0.2.ebuild,
  eselect-emacs-0.4.ebuild:
  Update desktop database. Old versions removed.

  22 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
  +eselect-emacs-0.4.ebuild:
  Some cleanup. Set Type=Application only in desktop file. Handling of
  compression extensions made more robust.

  21 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de>
  -eselect-emacs-0.3-r1.ebuild, +eselect-emacs-0.3-r2.ebuild:
  Install desktop file and icon only if X USE flag is set.

  20 Mar 2007; <ulm@gentoo.org> +eselect-emacs-0.3-r1.ebuild,