@@ -1,23 +1,24 @@
 DIST eselect-emacs-0.7.tar.bz2 18714 RMD160 5207a81737e43d72acc19b21047c209032cd2889 SHA1 d3cd00e93522cc1ec52ac7350d271e3d097a84c8 SHA256 4b375a5ebfe0020e1f49fe1eae5efb069748dc854090ed376a0854f0fbec3e87
+DIST eselect-emacs-0.8.tar.bz2 2982 RMD160 f5274d16c90b9d2ee971978ca5377c2a089436b9 SHA1 f0867bedd91ed31e8f6927e77646b6c379a26874 SHA256 fdd604f41146a1630455abaf5a2b87aaf2f433b52ef0c1df52285b41ad164405
 EBUILD eselect-emacs-0.7-r1.ebuild 547 RMD160 4eb1c312f8d74f3eab2ac35bff39cfc30b1463ee SHA1 5886c2116f82eab61ab001a84c5e89fcf502c5b1 SHA256 7751ae16d0cfabac516fce5e3c19deebebbd396afbd8cd413e9c26aebd933da7
 MD5 e5ad2cd0f4914e8c7cb5f29779612d18 eselect-emacs-0.7-r1.ebuild 547
 RMD160 4eb1c312f8d74f3eab2ac35bff39cfc30b1463ee eselect-emacs-0.7-r1.ebuild 547
 SHA256 7751ae16d0cfabac516fce5e3c19deebebbd396afbd8cd413e9c26aebd933da7 eselect-emacs-0.7-r1.ebuild 547
-EBUILD eselect-emacs-0.7.ebuild 776 RMD160 a4f7f1697df6c7a2347e7c5b5fe4b9e16954711e SHA1 65aba42ded69b97aeb9061c58c726218e94cd785 SHA256 672e33a19bade3ac90beceb998d3f6c656b4289820187128c7059fca639f06bc
-MD5 c0d59ec2ca8fdd5d068300eac2f6388c eselect-emacs-0.7.ebuild 776
-RMD160 a4f7f1697df6c7a2347e7c5b5fe4b9e16954711e eselect-emacs-0.7.ebuild 776
-SHA256 672e33a19bade3ac90beceb998d3f6c656b4289820187128c7059fca639f06bc eselect-emacs-0.7.ebuild 776
-MISC ChangeLog 3842 RMD160 5bbc8bc6e4875abdfc9582a91e6aa5b02828da2c SHA1 5f56a7bcfd8e677ce61c124a208b2a4e133fd74e SHA256 3f1c77b0386f2aadf36682087de3af18ddbc3fe605ebb09fb34c645734b046a6
-MD5 a010e4531d9434b6294c5b65eb68062a ChangeLog 3842
-RMD160 5bbc8bc6e4875abdfc9582a91e6aa5b02828da2c ChangeLog 3842
-SHA256 3f1c77b0386f2aadf36682087de3af18ddbc3fe605ebb09fb34c645734b046a6 ChangeLog 3842
+EBUILD eselect-emacs-0.8.ebuild 547 RMD160 4eb1c312f8d74f3eab2ac35bff39cfc30b1463ee SHA1 5886c2116f82eab61ab001a84c5e89fcf502c5b1 SHA256 7751ae16d0cfabac516fce5e3c19deebebbd396afbd8cd413e9c26aebd933da7
+MD5 e5ad2cd0f4914e8c7cb5f29779612d18 eselect-emacs-0.8.ebuild 547
+RMD160 4eb1c312f8d74f3eab2ac35bff39cfc30b1463ee eselect-emacs-0.8.ebuild 547
+SHA256 7751ae16d0cfabac516fce5e3c19deebebbd396afbd8cd413e9c26aebd933da7 eselect-emacs-0.8.ebuild 547
+MISC ChangeLog 4074 RMD160 875d5a9163d57c61dcab3802fd44062e31e1b10c SHA1 13c0ab383c66f0ea63d184a78d1761f2f2076b4f SHA256 c98eb057c0d5a3c26fc9a06530cb1500d907c3af7b5eb9a1db98710f46a169a6
+MD5 f0a3c035aaf3fbe24d7c1849fd408566 ChangeLog 4074
+RMD160 875d5a9163d57c61dcab3802fd44062e31e1b10c ChangeLog 4074
+SHA256 c98eb057c0d5a3c26fc9a06530cb1500d907c3af7b5eb9a1db98710f46a169a6 ChangeLog 4074
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab metadata.xml 158
-MD5 f50c79be518d64dee35306ae4af77209 files/digest-eselect-emacs-0.7 253
-RMD160 2bfd1b05577deeef7d92eaff3c9023ca4076c9a8 files/digest-eselect-emacs-0.7 253
-SHA256 c9fb391132db146206cf99f533e7ee26cd21c5033eb720c71dfab7e96c558a12 files/digest-eselect-emacs-0.7 253
 MD5 f50c79be518d64dee35306ae4af77209 files/digest-eselect-emacs-0.7-r1 253
 RMD160 2bfd1b05577deeef7d92eaff3c9023ca4076c9a8 files/digest-eselect-emacs-0.7-r1 253
 SHA256 c9fb391132db146206cf99f533e7ee26cd21c5033eb720c71dfab7e96c558a12 files/digest-eselect-emacs-0.7-r1 253
+MD5 a91268e7d67de90197d074dd63a099a9 files/digest-eselect-emacs-0.8 250
+RMD160 5975a66b7aa2e20455da7fb6bbb46e82de6027e0 files/digest-eselect-emacs-0.8 250
+SHA256 eb302df1ab150b496b9363a3997a0eb0f7a8eee5ef7daad0c6c196c8317a1945 files/digest-eselect-emacs-0.8 250
