@@ -1,3 +1,0 @@
-MD5 b830c69950de4a6016fddba3f22f1e60 eselect-emacs-0.7.tar.bz2 18714
-RMD160 5207a81737e43d72acc19b21047c209032cd2889 eselect-emacs-0.7.tar.bz2 18714
-SHA256 4b375a5ebfe0020e1f49fe1eae5efb069748dc854090ed376a0854f0fbec3e87 eselect-emacs-0.7.tar.bz2 18714
