@@ -1,0 +1,3 @@
+MD5 d69f853192acaa4060a32947ef88f40d eselect-emacs-0.8.tar.bz2 2982
+RMD160 f5274d16c90b9d2ee971978ca5377c2a089436b9 eselect-emacs-0.8.tar.bz2 2982
+SHA256 fdd604f41146a1630455abaf5a2b87aaf2f433b52ef0c1df52285b41ad164405 eselect-emacs-0.8.tar.bz2 2982
